--- a/resources/css/pages/home.css
+++ b/resources/css/pages/home.css
@@ -265,6 +265,16 @@
     }
 
 
+    @keyframes pop-in {
+        0%   { opacity: 0; transform: scale(0.8); }
+        60%  { opacity: 1; transform: scale(1.05); }
+        100% { opacity: 1; transform: scale(1); }
+    }
+
+    .modal-pop {
+        animation: pop-in 0.4s ease-out forwards;
+    }
+
 
 
 }
