added featured products and vids

--- a/resources/css/globals.css
+++ b/resources/css/globals.css
@@ -453,6 +453,8 @@
 }
 
 @layer components {
+    .brand-card,
+    .category-card,
     .reviews__card,
     .featured__card,
     .philosophy__card,
